--- a/classExampleJquery20240216.html
+++ b/classExampleJquery20240216.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Examples Practice for LO4 Jquery</title>
     <script src="scripts/jquery-3.4.1.min.js" ></script>
+
     <style type="text/css">
         #result {
             display: none;
@@ -19,8 +20,6 @@
             padding: 3px;
             width: 10em;       
         }
-
-       
     </style>
 
   </head>
@@ -203,12 +202,17 @@
 //             //document.getElementById("innerTextorHTMLExample").innerText = "<strong>I am the king</strong>"
 //         }
 
+    //         <p>Cheesiest movie line EVER</p>
+    // <p><p/>
+    //     Cheesiest movie line EVER
+    //     <p>Cheesiest movie line EVER</p>
 
-//         function clickFunction()
-//         {
-//             clickNumber++
 
-//             switch(clickNumber){
+        // function clickFunction()
+        // {
+    //             clickNumber++
+
+    //             switch(clickNumber){
 //                 case 1:
 //                     alert("Creating <p> element")
 //                     newElement =  document.createElement("p")
